Fix whitespace

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -44,6 +44,7 @@ body {
 
 .section a {
   cursor: pointer;
+  font-size: 1em;
 }
 
 .active {
@@ -65,7 +66,6 @@ body {
 .content {
   flex-grow: 1;
   margin: 10px;
-  white-space: pre-line;
   overflow-y: auto;
 }
 
